--- a/cert-manager-configuration/overlays/sugardon01/kustomization.yaml
+++ b/cert-manager-configuration/overlays/sugardon01/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - ../../base
   - clusterissuer.yaml
   # Certificate is depend on namespace
-  # - certificate.yaml
+  - certificate.yaml
